# sha256-rs

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md  foo.file
.github/workflows/: check.yml
src/: async_digest.rs  lib.rs  openssl_sha256.rs  tests.rs
