[package]
name = "sha256"
version = "1.0.1"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
edition = "2018"
description = "sha256 crypto digest"
keywords = ["sha256", "hash", "digest"]
readme = "README.md"
categories = ["cryptography"]
repository = "https://github.com/baoyachi/sha256-rs"
license = "MIT AND Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
sha2 = "0.9.2"