[package]
name = "sha256"
version = "1.2.1"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
edition = "2018"
description = "sha256 crypto digest"
keywords = ["sha256", "hash", "digest"]
readme = "README.md"
categories = ["cryptography"]
repository = "https://github.com/baoyachi/sha256-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
sha2 = { version = "0.10.6", default-features = false }
openssl = { version = "0.10.54", optional = true, default-features = false }
async-trait = "0.1.68"
tokio = { version = "1.28.2", features = ["io-util"] }
bytes = "1.4.0"

[features]
native_openssl = ["openssl"]

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }
tokio-test = "0.4.2"